# wiki-me-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
app/: exceptions.py  logger_setup.py  main.py
app/middlewares/: session_status.py
app/models/: base_model.py  base_redis_entity.py  game.py  player.py  redis_actions.py
app/routers/: __init__.py  auth.py  games.py
app/services/: __init__.py  auth.py  connections.py  env_vars.py  logger_setup.py  redis_conf.py
app/socket/: game.py  game_manager.py  games_manager.py  player.py  rooms_manager.py
app/socket_managers/: game_manager.py  game_room.py  games_manager.py  player.py  player_connection.py
services/redis/: build.sh
src/: main.py  rooms_manager.py
src/services/: __init__.py  wiki.py
src/socket/: __init__.py  message.py  player.py  room.py  rooms_manager.py
tests/: test_basics.py
