[project]
name = "wiki-me-backend"
version = "0.1.0"
description = "wiki me backend used to manage socket server for players"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "loguru>=0.7.2",
    "uvicorn[standard]>=0.32.1",
    "websockets>=14.1",
    "wikipedia>=1.4.0",
]
