[project]
name = "wiki-me-backend"
version = "0.1.0"
description = "wiki me backend used to manage socket server for players"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.16.0",
    "fastapi-csrf-protect>=0.3.7",
    "fastapi[standard]>=0.115.5",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.2",
    "redis[hiredis]>=5.2.0",
    "uvicorn[standard]>=0.32.1",
    "websockets>=14.1",
    "wikipedia>=1.4.0",
]
